# codingtest

./: CMakeLists.txt  README.md
data/: spec.txt
demo/: demo.cpp
include/: Specs.h  imageEditing.h  utils.h
src/: Specs.cpp  imageEditing.cpp  utils.cpp
